# backend/docs/swagger.json
@@ -84,6 +84,79 @@
                 }
             }
         },
+        "/likes/:user_id": {
+            "post": {
+                "description": "list works by user like",
+                "tags": [
+                    "like"
+                ],
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "user id",
+                        "name": "user_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/likes/:work_id": {
+            "post": {
+                "description": "like a work",
+                "tags": [
+                    "like"
+                ],
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "work id",
+                        "name": "work_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "unlike a work",
+                "tags": [
+                    "like"
+                ],
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "work id",
+                        "name": "work_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/ping": {
             "get": {
                 "description": "do ping",
@@ -389,6 +462,9 @@
                     "type": "string"
                 },
                 "id": {
+                    "type": "integer"
+                },
+                "liked": {
                     "type": "integer"
                 },
                 "user": {
